# logicpy

./: README.md  pyproject.toml
logicpy/: parser.py
