[tool.poetry]
name = "logicpy"
version = "0.1.0"
description = ""
authors = ["Daniel Hilst <danielhilst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.9"
igraph = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
